# g2o_examples

./: CMakeLists.txt  README
data/: ba.g2o
include/: edge_se3expmap_direct.h
matlab_version/: README.md
matlab_version/lsslam/: LSSlamTest.m  ls_slam.m  read_graph.m
src/: CMakeLists.txt  ba.cpp  gicp_demo.cpp  icp.cpp  simple_optimize.cpp
